--- a/Views/SalesOrder/OrderItems.cshtml
+++ b/Views/SalesOrder/OrderItems.cshtml
@@ -1,10 +1,12 @@
 ﻿@{
     ViewData["Title"] = "New Order";
 }
-<link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
-<link rel="stylesheet" href="/resources/demos/style.css">
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css" />
+<link rel="stylesheet" href="https://resources/demos/style.css" />
 <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+
+
 
 <div ng-view="" class="ng-scope" style="" ng-init="GetItemsDetails()">
     <div class="wrapper ng-scope">
@@ -17,11 +19,36 @@
                 <div class="card-body" style="padding: 15px">
                     <h4 class="card-title text-center ng-binding">New Order : Preview</h4>
                     <hr>
-                    <div class="row p-2">
-                        <div class="col-md-9">
-                            <p class="ng-binding"><span style="color: grey;margin: 0px">Name : </span> <span id="CustomeraName"></span></p>
-                            <p class="ng-binding"><span style="color: grey;margin: 0px">Billing Address : </span> <span id="BillingAdd"></span></p>
-                            <p class="ng-binding"><span style="color: grey;margin: 0px">Shipping Address : </span> <span id="ShippingAdd"></span>&nbsp;&nbsp;&nbsp;<span class="badge badge-primary" data-toggle="modal" data-target="#shipping_address" ng-click="changeShippingAddress()" role="button" tabindex="0">Change</span></p>
+                    <div class="row p-2" >
+                        <div class="col-md-9" ng-repeat="item in ItemDetails">
+                            <p class="mb-0 ng-binding"><strong class="ng-binding">Order ID</strong> : <span id="ordid"></span></p>
+                            <!---- Order Date  -->
+                            <p class="mb-0 ng-binding"><strong class="ng-binding">Order Date</strong> : <span id="orddate"></span></p>
+                            <!---- Order Placed BY Name  -->
+                            <p class="mb-0 ng-binding"><strong>Order Placed by</strong> : <span id="ordplacedby"></span></p>
+                            <!---- Salesperson Name  -->
+                            <p class="mb-0 ng-binding"><strong class="ng-binding">Salesperson</strong> : <span id="ordsalesperson"></span></p>
+                            <!--<p class="mb-0 " ><strong>{{getRoleName('Salesperson')}}</strong> : {{getUserName(orderDetails[0].salesperson)}}</p>-->
+                            <!---- Stockist Name -->
+                            <!-- ngIf: orderDetails[0].stockistname -->
+                            <!---- Customer Group / Class -->
+                            <p class="mb-0 ng-binding ng-hide" ng-show="orderDetails[0].class" aria-hidden="true">
+                                <strong>Group</strong> :
+                            </p>
+                            <!---- Customer Plant Code (Duroflex) -->
+                            
+                            <!-- Customer request date-->
+                            <p class="mb-0 ng-binding ng-hide" ng-show="orderDetails[0].customerRequestDate" aria-hidden="true">
+                                <strong>&#xFEFF;Customer Request Date </strong> :
+                            </p>
+                            <p class="ng-binding"><span style="color: grey;margin: 0px"><strong>Name</strong> : </span> <span id="CustomeraName"></span></p>
+                            <p class="ng-binding"><span style="color: grey;margin: 0px"><strong>Billing Address</strong> : </span> <span id="BillingAdd"></span></p>
+                            <p class="ng-binding">
+                                <span style="color: grey;margin: 0px"><strong>Shipping Address</strong> : </span> <span id="ShippingAdd"></span>&nbsp;&nbsp;&nbsp;
+                                <span class="badge badge-primary"
+                                      data-toggle="modal" data-target="#shipping_address"
+                                      ng-click="changeShippingAddress()" role="button" tabindex="0">Change</span>
+                            </p>
                         </div>
                         <!-- <div class="col-md-3"></div> -->
                         <!-- ngIf: user.role != 'dealer' -->
@@ -32,24 +59,23 @@
                                     ng-options="name.plant for name in LoadPlant" ng-model="selplant">
                                 
                                 <option value="">Select Plant Code</option>
+                            </select>
+                                <hr>
+                                 <label style="color: grey;margin: 0px" >Vehicle Code</label>
+                            <select id="VehicleSel" class="form-control ng-pristine ng-untouched ng-valid" ng-change="ChangePlant()" tabindex="0" aria-invalid="false" ng-controller="MyController2"
+                                    ng-options="name.vehicleCode for name in LoadVehicle" ng-model="selplant">
+
+                                <option value="">Select Vehicle Code</option>
+                               </select>
                                 <!--<option ng-repeat="code in plant_codes track by $index" ng-value="code.code">{{code.code}}</option>-->
                                 <!-- ngRepeat: code in plant_codes track by $index -->
                                @* <option ng-repeat="code in plant_codes track by $index" ng-value="code.supplier" class="ng-binding ng-scope" value="P056">P056</option><!-- end ngRepeat: code in plant_codes track by $index -->
                                 <option ng-repeat="code in plant_codes track by $index" ng-value="code.supplier" class="ng-binding ng-scope" value="P055">P055</option><!-- end ngRepeat: code in plant_codes track by $index -->
                                 <option ng-repeat="code in plant_codes track by $index" ng-value="code.supplier" class="ng-binding ng-scope" value="P001">P001</option><!-- end ngRepeat: code in plant_codes track by $index -->
                                 <option ng-repeat="code in plant_codes track by $index" ng-value="code.supplier" class="ng-binding ng-scope" value="P014">P014</option><!-- end ngRepeat: code in plant_codes track by $index -->
-                          *@  </select>
+                          *@  
                         </div>
-                        <div class="col-md-9"></div>
-
-                        <div class="col-md-3 ng-scope" ng-if="nav[24].activated">
-                            <label style="color: grey;margin: 0px" >Vehicle Code</label>
-                            <select id="VehicleSel" class="form-control ng-pristine ng-untouched ng-valid" ng-change="ChangePlant()" tabindex="0" aria-invalid="false" ng-controller="MyController2"
-                                    ng-options="name.vehicleCode for name in LoadVehicle" ng-model="selplant">
-
-                                <option value="">Select Vehicle Code</option>
-                               </select>
-                        </div>
+                       
                         
                         
                         <!-- end ngIf: user.role != 'dealer' -->
@@ -60,54 +86,58 @@
                             <input type="text" id="Cus_refId" maxlength="30" class="form-control ng-pristine ng-untouched ng-valid" id="cust_ref_number" ng-model="customer.cust_order_reference_number" placeholder="Reference Number" tabindex="0" aria-invalid="false">
                         </div><!-- end ngIf: nav[24].activated -->
                     </div>
-                    <br><button class="btn btn-md btn-primary" onclick="Homeurl()"
+                    <input type="hidden" id="hdnstatus" />
+                    <input type="hidden" id="hdnprofile" />
+                    <br><button class="btn btn-md btn-primary" onclick="Homeurl()" ng-show = "IsVisible"
                                 id="addNewItemBtn" type="button">
                         Add More Items
                     </button>
                     <br>
-                    <div class="table-responsive" ng-app="MyApp2" ng-controller="MyController2" ng-init="GetItemsDetails();LoadVehicleDetails();LoadPlant();LoadVehicle();">
-                    <table class="table table-bordered table-striped table-hover table-condensed  text-center" id="Itemstbl">
+                    <div class="table-responsive sticky-table-demo" ng-app="MyApp2" ng-controller="MyController2" style="overflow: scroll;height: 220px;" ng-init="GetItemsDetails();LoadVehicleDetails();LoadPlant();LoadVehicle();Loadshipping_addresses();">
+                    <table class="table table-bordered table-striped table-hover table-condensed  text-center Itemstblss" id="Itemstbl">
                        
                             <thead>
-                                <tr>
-                                    <th>Item</th>
-                                    <th>Material ID</th>
-                                    <th>Size</th>
-                                    <th>Qty</th>
-                                    <th>Pieces / KGs</th>
-                                    <th>Volume(CBM)</th>
-                                    <th>LDPE</th>
-                                    <th></th>
-                                    <th></th>
+                                <tr class="bg-dark text-white">
+                                    <th class="text-white ng-binding">S.No</th>
+                                    <th class="text-white ng-binding">Item</th>
+                                    <th class="text-white ng-binding">Material ID</th>
+                                    <th class="text-white ng-binding">Size</t>
+                                    <th class="text-white ng-binding">Qty</th>
+                                    <th class="text-white ng-binding">Pieces / KGs</th>
+                                    <th class="text-white ng-binding">Volume(CBM)</th>
+                                    <th class="text-white ng-binding">LDPE</th>
+                                    <th class="text-white ng-binding" ng-hide="item.flag != 'Admin'"></th>
+                                 
+                                    <th class="text-white ng-binding"></th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <!-- ngRepeat: item in newOrder track by $index -->
                                 <tr ng-repeat="item in ItemDetails" class="ng-scope">
-                                    <td class="ng-binding">{{item.itemName}}</td>
+                                    
+                                    <td class="text-center ng-binding">{{$index +1}}</td>
+                                    <td class="text-center ng-binding">{{item.itemName}}</td>
 
-                                    <td class="ng-binding">{{item.materialID}}</td>
+                                    <td class="text-center ng-binding">{{item.materialID}}</td>
                                     <td>
-                                        <span  class="ng-binding ng-scope">L - {{item.lmax}}</span><!-- end ngIf: item.leng --> <!-- ngIf: item.width -->
+                                        <span class="text-center ng-binding">L - {{item.lmax}}</span><!-- end ngIf: item.leng --> <!-- ngIf: item.width -->
 
-                                        <span  class="ng-binding ng-scope">W - {{item.wmax}}</span><!-- end ngIf: item.width --> <!-- ngIf: item.thickness -->
+                                        <span class="text-center ng-binding ng-scope">W - {{item.wmax}}</span><!-- end ngIf: item.width --> <!-- ngIf: item.thickness -->
 
-                                        <span  class="ng-binding ng-scope">T - {{item.tmax}}</span><!-- end ngIf: item.thickness -->
+                                        <span  class="text-center ng-binding ng-scope">T - {{item.tmax}}</span><!-- end ngIf: item.thickness -->
                                     </td>
                                     <!-- <td>{{item.leng + ' - ' + item.width + ' - ' + item.thickness}}</td> -->
                                     @*<td class="ng-binding totalqty" id="totalqtydd" >
                                         
                                         <input type="text" id="ttlqty" disabled="disabled" border="0" class="form-control" value={{item.qty}}>
                                         </td>*@
-                                <td>
-                                    
-                                    <span class="editable" id="qtyid">{{item.qty}}</span></td>
+                                <td> <span class="editable" id="qtyid">{{item.qty}}</span></td>
                                 
                               
 
-                                    <td class="ng-binding TotalPieces" id="TotalPiecesd">{{item.pieces}}</td>
-                                    <td class="ng-binding TotalVolume">{{item.volume}}</td>
-                                    <td class="ng-binding">{{item.ldpe}}</td>
+                                    <td class="text-center ng-binding TotalPieces" id="TotalPiecesd">{{item.pieces}}</td>
+                                    <td class="text-center ng-binding TotalVolume">{{item.volume}}</td>
+                                    <td class="text-center ng-binding">{{item.ldpe}}</td>
                                     <td class="ng-binding" style="display:none">{{item.id}}</td>
 
                                     <td class="ng-binding" style="display:none">{{item.item_Name}}</td>
@@ -119,18 +149,19 @@
 
 
 
-                                
 
-                               
-                               <td>
-                                    <button class="edit btn btn-danger">edit</button>
+
+
+                                    <td class="editd" id="edithide" ng-hide="item.flag != 'Admin'">
+                                        <button class="edit btn btn-danger" id="editbtn" ng-hide="item.flag != 'Admin'">Edit</button>
                                    @* <button class="cancel btn btn-danger" style="display:none">cancel</button>*@
                                     </td>
 @*                                    <td><button style="display:none" id="Saveid" type="button" class="save btn btn-danger" tabindex="0" ng-click="UpdateItem(item.id)">Save</button> </td>
-*@                                    <td><button type="button" class="btn btn-danger" ng-click="RemoveItem(item.id)" tabindex="0">Remove</button> </td>
+*@                                    <td><button type="button" class="btn btn-danger" ng-click="RemoveItem(item.id)" tabindex="0">Delete</button> </td>
                                 </tr><!-- end ngRepeat: item in newOrder track by $index -->
 
                                 <tr>
+                                    <td></td>
                                     <td></td>
                                     <td></td>
                                     <td></td>
@@ -154,7 +185,32 @@
                                     {{vehi.vehiTypedesc}}
                                 </p>*@
 
-                           
+                        <div class="modal fade ng-scope" id="shipping_address" aria-hidden="true" style="display: none;">
+                            <div class="modal-dialog modal-lg">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5>Change Shipping Address</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <!-- ngIf: !config.add_new_address -->
+                                        <div class="row full-width ng-scope" ng-if="!config.add_new_address">
+                                            <!-- ngRepeat: address in shipping_addresses -->
+                                            <div class="col-md-3 m-2 card grid-margin stretch-card ng-scope" ng-repeat="address in shipping_addresses" ng-click="selectAddress(address.dealerCode,address.address);" role="button" tabindex="0" style="">
+                                                <div class="card-body ng-binding">
+                                                    <h4 class="card-title ng-binding">{{address.addressName}} <!-- ngIf: address.selected -->
+                                                        <span class="pull-right text-success ng-scope" ng-if="address.selected" style=""><i class="mdi mdi-check-circle"></i> Selected</span>
+                                                     </h4>
+                                                    <hr>{{address.address}}
+                                                    <hr>Delivery Location : {{address.deliveryLocation}}
+                                                </div>
+                                            </div>
+                                        </div><!-- end ngIf: !config.add_new_address -->
+                                        <!-- ngIf: config.add_new_address -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <br>
                     <div class="row">
@@ -211,21 +267,17 @@
     </div>
     </div>
     
-<!-- CSS files-->
-
-
-<!--JS Files-->
 
     <script >
    
     $(function () {
        
-        //$("#CRDDate").datepicker({
+        $("#CRDDate").datepicker({
           
-        //         dateFormat: 'dd/mm/yyyy', //check change
-        //    changeMonth: true,
-        //    changeYear: true
-        //});
+                 dateFormat: 'dd/mm/yyyy', //check change
+            changeMonth: true,
+            changeYear: true
+        });
 
 
    
@@ -261,6 +313,7 @@
           
         beforeShowDay: function (date) {
             var showDay = true;
+
             if (date.getDay() == 0 || date.getDay() == 6) {
                 showDay = false;
             }
@@ -273,9 +326,12 @@
     });
 
     });
-    </script>
-    <style class="ng-scope">
 
+
+    </script>
+
+    <style class="ng-scope">
+       
         .dropdown .dropdown-toggle:after {
             border: none;
             content: "\F140";
@@ -310,4 +366,6 @@
                 border-color: transparent;
             }
     </style>
+
+
 
