--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,11 +26,16 @@
     <link href="~/js/MessageBox_js/jquery.alerts.css" rel="stylesheet" type="text/css" />
     <script src="~/js/MessageBox_js/jquery.alerts.js" type="text/javascript"></script>
 
-    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
+   crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
-   
-        
+
+
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/json2/20130526/json2.min.js"></script>
     <!-- endinject -->
     <!-- plugin css for this page -->
     <!-- End plugin css for this page -->
@@ -38,6 +43,7 @@
     <link rel="stylesheet" href="~/css/style.css">
     <link rel="stylesheet" href="~/css/select2.min.css">
     <link rel="stylesheet" href="~/css/select2-bootstrap.min.css">
+
     <link rel="stylesheet" href="~/css/all.css">
     <link rel="stylesheet" href="~/css/owl.carousel.min.css">
     <link rel="stylesheet" href="~/css/owl.theme.default.min.css">
@@ -49,16 +55,20 @@
     <link rel="shortcut icon" href="assets/images/favicon.png">
     <!-- basic styles -->
     <!-- Orders Controllers -->
+    <script src="~/js/sidemenuctrl.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
     <script src="~/js/angular-material.min.js"></script>
     <script type="text/javascript" src="../js/OrderDetailsCtrl.js"></script>
     <script type="text/javascript" src="../js/OrdersCtrl.js"></script>
     <script src="~/js/customselect.js"></script>
+
     <!-- Router -->
     <style>
         #main {
             display: none;
         }
+
+      
     </style>
     <script>
         var myVar;
@@ -69,9 +79,32 @@
             document.getElementById("loader").style.display = "none";
             document.getElementById("main").style.display = "block";
         }
-    </script>
+       
 
-  
+    </script>
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <script>
+        $(document).ready(function () {
+       $('.sticky-table-demo').stickyTableHeader();
+       });
+  </script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+
+    <script type="text/javascript">
+        //function sendEmail() {
+        //    Email.send({
+        //        SecureToken: "security token of your smtp",
+        //        To: "balaji71187@gmail.com",
+        //        From: "balaji71187@gmail.com",
+        //        Subject: "Subject...",
+        //        Body: ""
+        //    }).then(
+        //        message => alert("mail sent successfully")
+        //    );
+        //}
+    </script>
+    <script src="~/js/tablefixedheader.js"></script>
 </head>
 <body data-theme="default" data-layout="fluid" data-sidebar-position="left" data-sidebar-layout="default" >
    
@@ -86,9 +119,10 @@
         <!--<h1 class="text-primary text-center square-box-loader-text">Initializing ...</h1>-->
     </div>
     
-    <div id="main" class="container-scroller ng-scope" style="display: block;" >
+    <div id="main" class="container-scroller ng-scope"  style="display: block;">
+        >
         <!-- partial:partials/_navbar.html -->
-        <nav class="navbar default-layout col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
+        <nav class="navbar default-layout col-lg-12 col-12 p-0 fixed-top d-flex flex-row" style="display: block;">
             <div class="text-center navbar-brand-wrapper d-flex align-items-top justify-content-center">
                 <a class="navbar-brand brand-logo" href="dashboard#/overview">
                     <img ng-src="~img/dd278ab3155f0ff2576fc19a90449c64.png" alt="logo" src="~/img/dd278ab3155f0ff2576fc19a90449c64.png">
@@ -196,18 +230,18 @@
                         <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="UserDropdown">
                             <div class="dropdown-header text-center">
                                 <img class="img-md rounded-circle" ng-src="~/assets/images/faces/face9.png" alt="Profile image" src="~/img/face9.png">
-                                <p class="mb-1 mt-3 font-weight-semibold ng-binding">Bharat Mobijini</p>
-                                <p class="font-weight-light text-muted ng-binding">bharat@mobijini.com</p>
+                                <p class="mb-1 mt-3 font-weight-semibold ng-binding" id="usersignoutid"></p>
+                               @* <p class="font-weight-light text-muted ng-binding">bharat@mobijini.com</p>
                                 <p class="font-weight-light text-muted ng-binding">dd278ab3155f0ff2576fc19a90449c64</p>
-                                <p class="font-weight-light text-muted mb-0 ng-binding">DRFX</p>
+                                <p class="font-weight-light text-muted mb-0 ng-binding">DRFX</p>*@
                             </div>
                             <!--<a class="dropdown-item">My Profile <span class="badge badge-pill badge-danger">1</span><i
                                     class="dropdown-item-icon ti-dashboard"></i></a>-->
                             <a class="dropdown-item" href="dashboard#/messages">Messages<i class="dropdown-item-icon ti-comment-alt"></i></a>
                             <!--<a class="dropdown-item">Activity<i class="dropdown-item-icon ti-location-arrow"></i></a>-->
-                            <a class="dropdown-item" id="faq_dropdown">FAQ<i class="dropdown-item-icon ti-help-alt"></i></a>
-                            <a class="dropdown-item" href="switch_account">Switch Account<i class="dropdown-item-icon ti-power-off"></i></a>
-                            <a class="dropdown-item" href="logout">Sign Out <i class="dropdown-item-icon ti-power-off"></i></a>
+                           @* <a class="dropdown-item" id="faq_dropdown">FAQ<i class="dropdown-item-icon ti-help-alt"></i></a>
+                            <a class="dropdown-item" href="switch_account">Switch Account<i class="dropdown-item-icon ti-power-off"></i></a>*@
+                            <a class="dropdown-item" href="@Url.Action("UserLogin", "Home")">Sign Out <i class="dropdown-item-icon ti-power-off"></i></a>
                         </div>
                     </li>
                 </ul>
@@ -217,7 +251,7 @@
             </div>
         </nav>
         <!-- partial -->
-        <div class="container-fluid page-body-wrapper">
+        <div class="container-fluid page-body-wrapper" id="sideid">
             <!-- partial:partials/_sidebar.html -->
             <div class="right-sidebar-toggler-wrapper" ng-hide="instance_details.coID==&#39;ATMS&#39;" aria-hidden="false">
                 <div class="sidebar-toggler" title="Home"><a href="dashboard#/overview"><i class="mdi mdi-home"></i></a></div>
@@ -261,7 +295,8 @@
                     </li>
                 </ul>
             </div>
-            <nav class="sidebar sidebar-offcanvas" id="sidebar">
+           
+            <nav class="sidebar sidebar-offcanvas" id="sidebar" >
                 <ul class="nav ps">
                     <li class="nav-item nav-profile">
                         <a href="@Url.Action("UserProfile", "Home")" class="nav-link">
@@ -270,8 +305,8 @@
                                 <div class="dot-indicator bg-success"></div>
                             </div>
                             <div class="text-wrapper">
-                                <p class="profile-name ng-binding">Balaji</p>
-                                <p class="designation ng-binding">Admin</p>
+                                <p class="profile-name ng-binding" id="userid"></p>
+                                <p class="designation ng-binding" id="profileid"></p>
                             </div>
                         </a>
                     </li>
@@ -300,14 +335,20 @@
                             <ul class="nav flex-column sub-menu">
                                 <li class="nav-item">
                                     <a class="nav-link ng-binding" href="@Url.Action("OrderHistory", "SalesOrder")">Orders History</a>
-                                    <br />
-                                    <a class="nav-link ng-binding" href="@Url.Action("CustomersList", "Home")">FOAM  Order</a>
+                                    <br /> 
+                                    @Html.Hidden("RedirectToOrderCreation", Url.Action("OrderCreation", "SalesOrder"))
+                                    @Html.Hidden("RedirectToCustomelist", Url.Action("CustomersList", "Home"))
+                                   @* <a class="nav-link ng-binding" href="@Url.Action("CustomersList", "Home")">FOAM  Order</a>*@
+                                    <div id="MenuFoamId" >
+                                        <a class="nav-link ng-binding" href="#" id="FoamOrder_Menuid">FOAM  Order</a>
+                                        @*<span class="nav-link ng-binding" id="FoamOrder_Menuid">FOAM  Order </span>*@
+                                    </div>
                                 </li>
                             </ul>
                         </div>
                     </li>
                     <!-- Dealers / Customers --->
-                    <li ng-show="nav[2].activated" class="nav-item" aria-hidden="false">
+                    <li ng-show="nav[2].activated" class="nav-item" aria-hidden="false" id="CustomerMenu" style="display:none">
                         <a class="nav-link" href="@Url.Action("CustomersList", "Home")">
                             <i class="menu-icon typcn typcn-business-card"></i>
                             <span class="menu-title ng-binding">Customers</span>
